version/0.24/_sources/api/solver/_autosummary/settings/high_res_tracking.rst.txt
:orphan:

.. _high_res_tracking:

high_res_tracking
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.high_res_tracking.high_res_tracking
    :show-inheritance:

.. rubric:: Attributes

========================================================================================   ============================================================================================================================================================================

Attribute                                                                                                                                                                                                                                                       Summary

========================================================================================   ============================================================================================================================================================================
:ref:`enabled <enabled_11>`                                                                    Enable/disable high resolution tracking. Please note that high-resolution tracking is the recommended default for highest tracking robustness, accuracy and performance.

:ref:`always_use_face_centroid_with_periodics <always_use_face_centroid_with_periodics>`                                                                       Enable/disable using quad face centroids when creating subtets if the case contains periodic boundaries.

:ref:`flow_interpolation <flow_interpolation>`                                                                                                                         Main menu holding options to enable/disable interpolation of flow data to the particle position.

:ref:`boundary_layer_tracking_enabled <boundary_layer_tracking_enabled>`                                                                                                         Enable/disable adjusting the particle timestep to account for high aspect ratio cells.

:ref:`subtet_validity_checking_enabled <subtet_validity_checking_enabled>`                                                                                                                             Enable/disable testing for inverted subtets due to warped cells.

:ref:`auto_intersect_tol_enabled <auto_intersect_tol_enabled>`                                                                                                                              Enable/disable using an automatic scaling of subtet intersection tolerance.

:ref:`barycentric_intersection_enabled <barycentric_intersection_enabled>`                                                                                                                  Enable/disable using barycentric coordinates for intersection calculations.

:ref:`particle_relocation <particle_relocation>`                                                                                                  Main menu holding information options to control relocating particles during case file reading or remeshing/adaption.

:ref:`stuck_particle_removal_enabled <stuck_particle_removal_enabled>`                                                                                                                            Enable/disable removal of particles that are stuck at edges or faces.

:ref:`barycentric_sampling_enabled <barycentric_sampling_enabled>`                                                                                                                   Enable/disable using of barycentric coordinates when sampling particles at planes.

:ref:`quad_face_centroid_enabled <quad_face_centroid_enabled>`                                                                                                                                       Enable/disable using of quad face centroids when creating subtets.

========================================================================================   ============================================================================================================================================================================

.. rubric:: Included in:

==========================   ===================================================================================================================

Parent                                                                                                                                   Summary

==========================   ===================================================================================================================
:ref:`numerics <numerics>`       Main menu to allow users to set options controlling the solution of ordinary differential equations describing 

==========================   ===================================================================================================================

